# bean-counter

./: .gitignore  Makefile  README.md  bean-counter.code-workspace  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
aws/: 310-requirements.txt
config/: service_account.json.example
src/bean_counter/: .env.example  __init__.py  main.ipynb  main.py
src/bean_counter/.ipynb_checkpoints/: main-checkpoint.ipynb
tests/: conftest.py  test_helpers.py  test_munge.py  version_1.csv
