[project]
name = "bean-counter"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Jon Whittlestone", email = "dev@howapped.com" }
]
dependencies = ["jupyterlab~=4.0.0", "uvicorn~=0.22.0", "fastapi~=0.95.2", "httpie~=3.2.2", "pytest~=7.3.1", "pytest-asyncio~=0.21.0", "httpx~=0.24.1", "asgi-lifespan~=2.1.0", "gspread~=5.9.0", "pandas~=2.0.2", "gspread-dataframe~=3.3.0", "Mangum~=0.17.0", "emoji~=2.5.0", "sketch~=0.4.2", "python-dotenv~=1.0.0"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
